# eightpuzzle

./: Cargo.toml  README.md
benches/: bencher.rs
src/: lib.rs  main.rs
